--- a/messaging_app/docker-compose.yml
+++ b/messaging_app/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3"
 services:
   web:
     build:
@@ -14,22 +13,21 @@ services:
     env_file:
       - .env
     depends_on:
-      - db:
-          condition: service_healthy
+      db:
+        condition: service_healthy
 
   db:
     image: mysql:5.7
-    container_name: project_name_mariadb
+    container_name: messaging_app_mysqldb
     restart: always
-    volumes:
-      - data:/var/lib/mysql
     environment:
       MYSQL_ROOT_PASSWORD: ${MYSQL_PASSWORD}
       MYSQL_DATABASE: ${MYSQL_DB}
       MYSQL_USER: ${MYSQL_USER}
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+      MYSQL_ALLOW_EMPTY_PASSWORD: true
     ports:
-      - "3306:3306"
+      - "3307:3306"
     healthcheck:
       test:
         [
@@ -46,6 +44,6 @@ services:
       timeout: 20s
       retries: 10
     volumes:
-    - db-datavolume:/var/lib/mysql
+      - db-datavolume:/var/lib/mysql
 volumes:
   db-datavolume:
