--- a/messaging_app/docker-compose.yml
+++ b/messaging_app/docker-compose.yml
@@ -3,9 +3,11 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: project_name_backend
+    container_name: messaging_app_backend
     command: sh -c "python3 manage.py migrate --noinput && python3 manage.py collectstatic --noinput && python3 manage.py runserver 0.0.0.0:8000"
     restart: always
+    environment:
+      SECRET_KEY: "some_key"
     volumes:
       - .:/app
     ports:
