--- a/messaging_app/green_deployment.yaml
+++ b/messaging_app/green_deployment.yaml
@@ -1,41 +1,31 @@
-apiVersion: v1
-kind: Service
-metadata:
-  name: k8s-django-service
-spec:
-  type: ClusterIP
-  selector:
-    app: messaging-app-server
-  ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 8001
-
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: messaging-app
+  name: messagin-app-green
+  labels:
+    app: messaging-app
+    version: green
 spec:
-  replicas: 1
+  replica: 1
   selector:
     matchLabels:
       app: messaging-app
+      version: green
   template:
     metadata:
       labels:
         app: messaging-app
+        version: green
     spec:
-      volumes:
-        - name: staticfiles
       containers:
       - name: messaging-app
-        image: messaging_app-web
-        imagePullPolicy: Never
+        image: dariodidi/messaging-app
         resources:
           limits:
             memory: "128Mi"
             cpu: "500m"
         ports:
         - containerPort: 8001
-        
+        env:
+        - name: DJANGO_SETTINGS_MODULE
+          value: "messaging_app.settings"
