--- a/messaging_app/messaging_app/blue_deployment.yaml
+++ b/messaging_app/messaging_app/blue_deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: django-service
+  name: k8s-django-service
 spec:
   type: ClusterIP
   selector:
@@ -29,12 +29,13 @@ spec:
       volumes:
         - name: staticfiles
       containers:
-        - name: messaging-app
-          image: messaging_app-web
-          imagePullPolicy: Never
-          resources:
-            limits:
-              memory: "128Mi"
-              cpu: "500m"
-          ports:
-            - containerPort: 8001
+      - name: messaging-app
+        image: messaging_app-web
+        imagePullPolicy: Never
+        resources:
+          limits:
+            memory: "128Mi"
+            cpu: "500m"
+        ports:
+        - containerPort: 8001
+        
