--- a/messaging_app/messaging_app/green_deployment.yaml
+++ b/messaging_app/messaging_app/green_deployment.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
       - name: messaging-app
-        image: dariodidi/messaging-app
+          image: dariodidi/messaging-app:1.0
         resources:
           limits:
             memory: "128Mi"
